<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ibAcoustic"
                android:layout_width="@dimen/ib_common_instrument_w"
                android:layout_height="@dimen/ib_common_instrument_h"
                android:background="@drawable/piano_acoustic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/tv_acoustic"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ibSyntez"
                android:layout_width="@dimen/ib_common_instrument_w"
                android:layout_height="@dimen/ib_common_instrument_h"
                android:layout_gravity="center"
                android:background="@drawable/synthesis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/tv_syntez"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ibMusicBox"
                android:layout_width="@dimen/ib_common_instrument_w"
                android:layout_height="@dimen/ib_common_instrument_h"
                android:layout_gravity="center"
                android:background="@drawable/music_box" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/tv_music_box"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ibXylophone"
                android:layout_width="@dimen/ib_common_instrument_w"
                android:layout_height="@dimen/ib_common_instrument_h"
                android:layout_gravity="center"
                android:background="@drawable/xylophone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/tv_xylophone"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ibSaxophone"
                android:layout_width="@dimen/ib_common_instrument_w"
                android:layout_height="@dimen/ib_common_instrument_h"
                android:layout_gravity="center"
                android:background="@drawable/saxophone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:text="@string/tv_saxophone"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>